@@ -1,4 +1,6 @@
 0.07
+    - The Words tokenizer now compresses whitespace when tokenizing as
+      well as whitespace-trimming the output it produces
     - Make start/end expressions only start/end sentences most of the time
       instead of all the time
     - Issue #13: `hailo -b brain' will launch an interactive ReadLine
